--- a/Index.html
+++ b/Index.html
@@ -6,16 +6,26 @@
     <title>About Me</title>
 </head>
 <body>
-    <body style="background-color: aqua;">
-    <h1 style="color:rgb(241, 31, 31);font-size: xx-large;">Fletcher's Teaching Portfolio Website</h1>
-    <img src="Images/profile for website.png" alt="">
+    <body style="background-color: rgb(161, 151, 132);">
+    <h1 style="color:rgb(99, 0, 0);font-size: xx-large;">Fletcher's Teaching Portfolio Website</h1>
+    <!--this is where i have added links to all my other webpages-->
+    <h2>Webage Links</h2>
+<ul>
+
+<li><a href="AboutMe.html">About Me</a></li>
+<li><a href="Projects.html">Projects</a></li>
+<li><a href="PersonalProjects.html">Personal Projects</a></li>
+<li><a href="TeachingStyle.html">Teaching Style</a></li>
+<li><a href="ContactMe.html">Contact Me</a></li>
+</ul>
+    <img src="Images/Profilepicturecircle.png" alt="profile image" width="200px">
     <p>These are two infrographics that highlight me as a teacher</p>
-    <img src="Images/Area Specialties.png" alt="">
-    <img src="Images/Woodworking Quote.png" alt="">
-    <p style="color:blue"> My name is Fletcher Hunt, and I study at <a href="https://www.acu.edu.au/">ACU</a> I am completing my 3rd year at the university in hopes of becoming a design and technology teacher. I am very passionate about my studies in addition to potential teaching content in particular teaching woodworking skills. In my spare time Aswell as a job. I enjoy making furniture and general cabinet making this gives me a variety of skill and knowledge that can be utilised in my teacher pedagogy to improve the outcomes of my students, I hope to teach senior years in the HSC subject industrial technology timber in the future .</p>
+    <img src="Images/Area Specialties.png" alt="inforgraphic of mt. teaching areas" width="300px">
+    <img src="Images/Woodworking Quote.png" alt=""width="300px">
+    <p style="color:rgb(0, 0, 78)"> My name is Fletcher Hunt, and I study at <a href="https://www.acu.edu.au/" target="_blank">ACU</a> I am completing my 3rd year at the university in hopes of becoming a design and technology teacher. I am very passionate about my studies in addition to potential teaching content in particular teaching woodworking skills. In my spare time Aswell as a job. I enjoy making furniture and general cabinet making this gives me a variety of skill and knowledge that can be utilised in my teacher pedagogy to improve the outcomes of my students, I hope to teach senior years in the HSC subject industrial technology timber in the future .</p>
      <!--- this is talking about what i like to do in my free time-->
-    <p>In my spare time I really enjoy going camping and exploring the outdoors or just taking in the environment outside of the city, I often will use my weekends as a time to escape Sydney for greener pastures such as the blue mountains or the coast. </p>
+    <p style="color:rgb(0, 0, 78)"> In my spare time I really enjoy going camping and exploring the outdoors or just taking in the environment outside of the city, I often will use my weekends as a time to escape Sydney for greener pastures such as the blue mountains or the coast. </p>
    <!--- this is talking about my employment at st marys-->
-    <p>I am currently employed at <a href="https://smccsydney.syd.catholic.edu.au/">St Marys cathedral college</a> in the city and am employed under the role of LSO and TAS Assistant this job means I am involved with the preparation and running of all technology classrooms and oversee all maintenance to do with the workshops, furthermore I am in charge of stock ordering and project budgeting for both existing and new projects throughout the school year, in addition I work closely with year 12 industrial timber majors on their major work projects giving guidance, reassurance and assistance when needed to ensure they are able to create a major work they can be proud of.</p>
+    <p style="color:rgb(0, 0, 78)"> I am currently employed at <a href="https://smccsydney.syd.catholic.edu.au/" target="_blank">St Marys cathedral college</a> in the city and am employed under the role of LSO and TAS Assistant this job means I am involved with the preparation and running of all technology classrooms and oversee all maintenance to do with the workshops, furthermore I am in charge of stock ordering and project budgeting for both existing and new projects throughout the school year, in addition I work closely with year 12 industrial timber majors on their major work projects giving guidance, reassurance and assistance when needed to ensure they are able to create a major work they can be proud of.</p>
 </body>
 </html>
